syntax = "proto3";
option java_multiple_files = true;
option java_package ="com.mx.fintecheando.grpc.proto.fineract";
option java_outer_classname = "AcclookupProto";


service AccountLookupService {
    rpc FindClientAccount (AccountLookupServiceRequest) returns (AccountLookupServiceResponse);
    rpc FindQuickClientAccount (AccountLookupServiceRequest) returns (AccountLookupServiceResponse);
}

message AccountLookupServiceRequest {
    string tenant_id = 1;
    string account = 2;
}

message AccountLookupServiceResponse {
    string account_details = 1;
}
